# company_control

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 08a3083978c4_squash_previous_migrations.py  21691d02f8a1_squash_previous_migrations.py  60f251e5b450_first_migration.py  72fc6c472b6a_add_department_and_position_models.py  9607e8152d98_add_unique_constraint_on_.py  cddd56d32e2a_first_migration.py  d18025351249_first_migration.py  ddee84bd17de_add_constraints_to_models.py  e461a454219f_add_head_of_department_field.py
app/: main.py
app/api/: __init__.py
app/api/v1/routers/: auth.py  company.py  department.py  position.py  users.py
app/core/: __init__.py  config.py
app/models/: auth.py  base.py  company.py  user.py
app/repositories/: auth.py  base.py  company.py  department.py  position.py  user.py
app/schemas/: auth.py  company.py  department.py  position.py  user.py
app/services/: auth.py  company.py  department.py  position.py  user.py
app/units_of_work/: base.py
app/utils/: auth.py  exceptions.py
prometheus_data/: prometheus.yml
